--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "ethers": "^5.7.1",
     "ethers-multicall": "^0.2.3",
     "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-request": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
