--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src -d ./lib",
-    "test": "yarn build && source ./.env && node ./test/test.js"
+    "test": "yarn build && source ./.env && jest"
   },
   "dependencies": {
     "changelog": "https://github.com/fiatdao/changelog",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3"
+    "@babel/preset-env": "^7.19.3",
+    "jest": "^29.1.2"
   }
 }
