Add github action 2

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Run tests
         env:
           TENDERLY_FORK_URL_15711690: "${{ secrets.TENDERLY_FORK_URL_15711690 }}"
-        run: yarn test
+        run: yarn ci
