--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
+    "ganache": "^7.4.4",
     "jest": "^29.1.2"
   }
 }
