--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fiatdao/sdk",
-  "version": "0.0.6",
-  "main": "src/lib/index.js",
+  "version": "0.0.7",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib && babel ./src -d ./lib",
