--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Install depedencies
+      - name: Install dependencies
         run: yarn
 
       - name: Run tests
