--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Install depedencies
+      - name: Install dependencies
         run: yarn
 
       - name: Run tests
