--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "ganache": "^7.4.4",
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "typescript": "4.8.4"
   }
 }
