--- a/package.json
+++ b/package.json
@@ -17,7 +17,19 @@
     "yarn.lock"
   ],
   "babel": {
-    "presets": [["@babel/preset-env", { "targets": { "browsers": ["chrome >= 66", "firefox >= 68"] } }]],
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "browsers": [
+              "chrome >= 66",
+              "firefox >= 68"
+            ]
+          }
+        }
+      ]
+    ],
     "sourceMaps": "inline"
   },
   "dependencies": {
