--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Run tests
         env:
           ALCHEMY_API_KEY: "${{ secrets.ALCHEMY_API_KEY }}"
+          TENDERLY_API_KEY: "${{ secrets.TENDERLY_API_KEY }}"
         run: yarn ci
 
       - uses: JS-DevTools/npm-publish@v1
